# StrikeMarket

./: .gitignore  CLAUDE.md  SKILL.md  TODOS.md  enelbot-skill.md  enelbot-wirepaper-v2.md  package-lock.json  strike-wirepaper-v2.md
coordinator/: .dockerignore  Dockerfile  package-lock.json  package.json
coordinator/scripts/: e2e-devnet.ts  init-mainnet.ts  miner-agent.ts  reinit-devnet.ts
coordinator/src/: config.ts  enelbot.json  pda.ts  server.ts  strike-idl.json
coordinator/src/middleware/: auth.ts
coordinator/src/routes/: auth.ts  challenge.ts  claim.ts  epoch.ts  submit.ts
coordinator/src/services/: alerts.ts  drift.ts  epoch.ts  polymarket.ts  scheduler.ts  scoring.ts  solana.ts
coordinator/tests/: auth.test.ts  config.test.ts  drift.test.ts  epoch.test.ts  pda.test.ts  polymarket.test.ts  scheduler.test.ts  scoring.test.ts
docs/: index.html
enelbot/: Anchor.toml  Cargo.toml
enelbot/programs/enelbot/: Cargo.toml
enelbot/programs/enelbot/src/: lib.rs  state.rs
enelbot/programs/enelbot/src/instructions/: admin.rs  initialize.rs  prediction.rs  stake.rs
enelbot/tests/: enelbot.ts
site/: index.html  lightpaper.md  robots.txt  sitemap.xml  skill.md
strike-program/: Anchor.toml  package-lock.json
strike-program/programs/enelbot/src/: error.rs  lib.rs  state.rs
strike-program/programs/strike/: Cargo.toml
strike-program/programs/strike/src/: error.rs  lib.rs  state.rs
strike-program/programs/strike/src/instructions/: admin.rs  claim.rs  initialize.rs  prediction.rs  stake.rs
strike-program/tests/: enelbot.ts  strike.ts
(+3 files in other folders)
