[package]
name = "strike"
version = "0.1.0"
description = "Proof-of-prediction mining protocol on Solana"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "strike"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]
anchor-debug = []
custom-heap = []
custom-panic = []

[dependencies]
anchor-lang = { version = "0.32.1", features = ["init-if-needed"] }
anchor-spl = "0.32.1"
solana-sha256-hasher = "2.3"
solana-hash = "2.3"

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(target_os, values("solana"))'] }
